--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
 
     - name: Knit Rmarkdown Documents
       run: |
-        Rscript -e "rmarkdown::render("index.Rmd")"
+        Rscript -e "rmarkdown::render(input = "index.Rmd")"
