--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         libxml2-dev \
         libssl-dev \
         libcurl4-openssl-dev
+        sudo apt-get install pandoc
         
     - name: Install R Package Dependencies
       run: |
