update .yml for pandoc install
chain pandoc install to prior call to install packages via apt get. Was failing bc needed user input. -y in top call forces Y for user input.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         sudo apt-get update && apt-get install -y --no-install-recommends \
         libxml2-dev \
         libssl-dev \
-        libcurl4-openssl-dev
-        sudo apt-get install pandoc
+        libcurl4-openssl-dev \
+        pandoc
         
     - name: Install R Package Dependencies
       run: |
