--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "quarto"
+  title: "Adaptive Preregistration for Model-Based Research"
   navbar:
     left:
       - href: index.qmd
